force-app/main/default/objects/npo02__User_Rollup_Field_Settings__c/npo02__User_Rollup_Field_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Configuración de campo de totalización d</label>
</CustomObject>