force-app/main/default/objects/npo02__User_Rollup_Field_Settings__c/fields/npo02__Field_Action__c.field-meta.xml
<CustomField>
    <fullName>npo02__Field_Action__c</fullName>
    <inlineHelpText>La acción de totalización (MIN, MAX, SUMA, CUENTA) a realizar en el campo de origen.</inlineHelpText>
    <label>Field Action</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>