force-app/main/default/objects/npo02__User_Rollup_Field_Settings__c/fields/npo02__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>npo02__Object_Name__c</fullName>
    <inlineHelpText>El objeto al que esta totalización de usuario está relacionado.</inlineHelpText>
    <label>Object Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>