force-app/main/default/objects/npo02__User_Rollup_Field_Settings__c/fields/npo02__Source_Field__c.field-meta.xml
<CustomField>
    <fullName>npo02__Source_Field__c</fullName>
    <inlineHelpText>El campo de origen y la acción del objeto para esta totalización de usuario.</inlineHelpText>
    <label>Source Field</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>