force-app/main/default/objects/npo02__User_Rollup_Field_Settings__c/fields/npo02__Target_Field__c.field-meta.xml
<CustomField>
    <fullName>npo02__Target_Field__c</fullName>
    <inlineHelpText>El campo de destino donde se colocará el valor totalizado para esta totalización definida por el usuario.</inlineHelpText>
    <label>Target Field</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>